overlapping issue fixed

--- a/src/containers/courseDetailsHeader/courseDetailsHeader.scss
+++ b/src/containers/courseDetailsHeader/courseDetailsHeader.scss
@@ -4,7 +4,7 @@
   background-position-x: 0px;
   background-position-y: 40px;
   background-size: 45%;
-  height: 41rem;
+  // height: 41rem;
 
   .couseDetailsHeader-container {
     padding-top: 40px;
